--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,5 +16,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".Register" />
+        <activity android:name=".Info" />
     </application>
 </manifest>
